# kltn_ai_services

./: .gitignore  README.md
ai-document-parser/: Dockerfile  README.md  pyproject.toml
ai-document-parser/src/ai_document_parser/: main.py
ai-document-parser/src/ai_document_parser/api/: document.py  main.py  routes.py
ai-document-parser/src/ai_document_parser/application/: document_service.py
ai-document-parser/src/ai_document_parser/domain/: document_service.py
ai-document-parser/src/ai_document_parser/domain/extractors/: image_extractor.py  pdf_extractor.py
ai-document-parser/src/ai_document_parser/domain/summarier/: document_summary.py
ai-document-parser/src/ai_document_parser/schema/: document_schema.py
ai-flashcards/: Dockerfile  README.md  pyproject.toml
ai-flashcards/src/ai_flashcards/api/: main.py  routes.py  schemas.py
ai-flashcards/src/ai_flashcards/application/: service.py
ai-flashcards/src/ai_flashcards/domain/: flashcard_generator.py
ai-flashcards/src/ai_flashcards/schema/: flashcard_request.py  flashcard_response.py
ai-flashcards/src/ai_flashcards/utils/: flashcard_common.py
ai-quizs/: Dockerfile  README.md  pyproject.toml  run.py  test_quiz_request.json
ai-quizs/src/ai_quizs/api/: main.py  routes.py  schemas.py
ai-quizs/src/ai_quizs/application/: services.py
ai-quizs/src/ai_quizs/schema/: api_response.py  quiz_common.py  quiz_request.py  quiz_response.py
ai-quizs/src/ai_quizs/utils/: quiz_utils.py
ai-quizs/tests/: conftest.py  test_generate_quiz.py
ai-recommendation/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  verify_service.py
ai-recommendation/evaluation/reports/: offline_eval_report_20260503_032111.json
ai-recommendation/src/ai_recommendation/: main.py
ai-recommendation/src/ai_recommendation/api/: routes.py  schemas.py
ai-recommendation/src/ai_recommendation/application/: service.py
shared-ai-lib/: pyproject.toml
shared-ai-lib/src/shared_ai/llm/: gemini.py
shared-ai-lib/src/shared_ai/schemas/: flashcard.py
