[project]
name = "ai-document-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "devzeus",email = "hieu01bdvn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "shared-ai-lib @ file:///E:/KLTN/kltn-ai-services/shared-ai-lib"
]

[tool.poetry]
packages = [{include = "ai_document_parser", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
