[project]
name = "ai-quizs"
version = "0.1.0"
description = "AI service for generating quizzes"
authors = [
    {name = "devzeus",email = "hieu01bdvn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "langchain>=1.2.6,<2.0.0",
    "fastapi>=0.128.0,<0.129.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "uvicorn>=0.40.0,<0.41.0",
    "python-dotenv>=1.2.1,<2.0.0",
]

[tool.poetry]
package-mode = false
packages = [{include = "ai_quizs", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = ">=0.40.0,<0.41.0"
pydantic = ">=2.12.5,<3.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
langchain = ">=1.2.6,<2.0.0"
shared-ai-lib = {path = "../shared-ai-lib", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
