[project]
name = "shared-ai-lib"
version = "0.1.0"
description = "Shared AI utilities. This library contains common functions and classes for AI projects."
authors = [
    {name = "devzeus",email = "hieu01bdvn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-google-genai (>=4.1.2,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "shared_ai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
